# plotQL

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ctl.sh  pyproject.toml  todo.md
docs/: connectors.md  engines.md  syntax.md  ui.md
examples/: simple.pql  trades.csv
plotql/: __init__.py  cli.py  grammar.json
plotql/core/: __init__.py  ast.py  config.py  executor.py  parser.py  result.py  utils.py
plotql/core/connectors/: __init__.py  base.py  clickhouse.py  file.py  folder.py  literal.py
plotql/core/engines/: __init__.py  base.py  matplotlib.py
plotql/themes/: __init__.py  base.py  vaporwave.py
plotql/ui/: __init__.py  autocomplete.py  config_editor.py  state.py  tui.py
tests/: __init__.py  conftest.py
tests/core/: test_ast.py  test_connectors.py  test_e2e.py  test_engines.py  test_executor.py  test_parser.py  test_result.py  test_utils.py
tests/ui/: __init__.py  test_autocomplete.py  test_e2e.py  test_highlighting.py  test_state.py
tree-sitter-plotql/: Cargo.toml  binding.gyp  generate_grammar.py  grammar.js  package.json  tree-sitter-plotql.wasm
tree-sitter-plotql/bindings/node/: binding.cc  index.js
tree-sitter-plotql/bindings/rust/: lib.rs
tree-sitter-plotql/queries/: highlights.scm
tree-sitter-plotql/src/: grammar.json  node-types.json  parser.c
tree-sitter-plotql/tree_sitter_plotql/: __init__.py
